# Copyright 2021 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/config/features.gni")
import("//neva/pal_service/pal_service.gni")
import("//third_party/grpc/grpc_library.gni")

assert(use_dbus)

grpc_library("applauncher_lib") {
  sources = [ "protos/applauncher.proto" ]
  proto_out_dir = "neva/pal_service/agl/protos"
}

source_set("pal_service_agl") {
  sources = [
    "appservice_delegate_agl.cc",
    "appservice_delegate_agl.h",
    "pal_platform_factory_agl.cc",
  ]

  configs += [ "//third_party/grpc:grpc_config" ]

  defines = pal_service_defines

  # When the implementation for AGL is done, the dependency on
  # "//neva/pal_service/dummy:pal_service_dummy" should be replaced
  # with "//neva/pal_service/agl:pal_service_agl".
  deps = [
    "//base",
    "//components/dbus/thread_linux",
    "//neva/pal_service/dummy:pal_service_dummy",
    "//neva/pal_service/public/mojom",
    "//third_party/grpc:grpc++",
    "//third_party/protobuf:protobuf_lite",
    ":applauncher_lib",
  ]
}
